2.0.6/_sources/plugins/available/feature-table/merge.txt
merge: Combine two tables
=========================

Combines a pair of feature tables which contain different samples, and which may or may not contain the same features.

.. raw:: html

   <table class="table action-signature">
     
     <thead>
       <tr>
         <th colspan="3">Inputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">table1</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">FeatureTable[Frequency]</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">table2</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">FeatureTable[Frequency]</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Parameters</th>
       </tr>
       
       <tr>
         <th colspan="3" class="text-muted">N/A</th>
       </tr>
       
     </thead>
     <tbody>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Outputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">merged_table</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">FeatureTable[Frequency]</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">N/A</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
   </table>